--- a/web/bex.css
+++ b/web/bex.css
@@ -227,6 +227,19 @@ select:{
   position:relative;
   top:0px;
 }
+.button3{
+  color: #1e62d0;
+  background-color: #fff;
+  border: 0;
+  font-weight:bold;
+  padding:2px 7px 2px 7px;
+  border:0;
+  text-decoration:none;
+}
+.button3:hover{
+  background-color: #1e62d0;
+  color: #fff;
+}
 .select{
   background-color: #F0F0F0;
   font-size: 14px;
@@ -246,15 +259,15 @@ select:{
 .field{
   margin:3px 3px 3px 3px;
 }
+.field input{
+  display:inline-block;
+  width:200px;
+  color: #1e62d0;
+}
 .fieldLabel{
   display:inline-block;
   width:250px;
   font-weight:bold;
-  color: #1e62d0;
-}
-.fieldInput{
-  display:inline-block;
-  width:200px;
   color: #1e62d0;
 }
 .fieldSelect{
@@ -300,17 +313,12 @@ select:{
   z-index:999;
   border:1px solid;
   background-color:#fff;  
-  color: #1e62d0;
   min-width:200px;
   white-space:nowrap;
 }
 .panelValues_parent{
   display:inline-block;
   position:relative;
-  width:0px;
-  height:0px;
-  margin:0px;
-  padding:0px;
 }
 .border{
   border:1px solid #000;
@@ -327,6 +335,13 @@ select:{
 }
 .selectable{
   cursor:pointer;
+}
+.coloredHover:hover{
+  background-color: #1e62d0;
+  color: #fff;
+}
+.centerButtons{
+  text-align:center;
 }
 .close{
   text-align:right;
